tests/good/printf/print_str_and_int.go
package main;
import "fmt";

func main(){
	fmt.Print(12,"true")
	fmt.Print("\n")
}

/*
== Expected program output ==
12true
*/